// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` renders equilateral when it is passed as a prop  1`] = `
<p>
  equilateral
</p>
`;

exports[` renders isosceles when it is passed as a prop  1`] = `
<p>
  isosceles
</p>
`;

exports[` renders scalene when it is passed as a prop  1`] = `
<p>
  scalene
</p>
`;
